--- a/packages/tyranid-sanitize/tsconfig.json
+++ b/packages/tyranid-sanitize/tsconfig.json
@@ -12,9 +12,5 @@
     "lib": ["es2015"],
     "skipLibCheck": true
   },
-  "files": [
-    "./src/index.ts",
-    "./src/tyranid-extensions.d.ts",
-    "./test/index.ts"
-  ]
+  "files": ["./src/index.ts", "./test/index.ts"]
 }
