--- a/packages/tyranid-sanitize/package.json
+++ b/packages/tyranid-sanitize/package.json
@@ -1,6 +1,8 @@
 {
   "name": "tyranid-sanitize",
   "version": "0.5.0",
+  "main": "./dist/src/index.js",
+  "typings": "./dist/src/index.d.ts",
   "peerDependencies": {
     "tyranid": "^0.5.0"
   },
