--- a/packages/tyranid-graphql/package.json
+++ b/packages/tyranid-graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyranid-graphql",
-  "version": "0.5.4",
+  "version": "0.5.5",
   "description": "GraphQL plugin for tyranid",
   "repository": {
     "type": "git",
@@ -25,6 +25,8 @@
     "graphql": "^0.12.3"
   },
   "ava": {
-    "files": ["dist/test/index.js"]
+    "files": [
+      "dist/test/index.js"
+    ]
   }
 }
