--- a/packages/tyranid-sanitize/package.json
+++ b/packages/tyranid-sanitize/package.json
@@ -3,6 +3,7 @@
   "version": "0.5.3",
   "main": "./dist/src/index.js",
   "typings": "./dist/src/index.d.ts",
+  "files": ["dist"],
   "peerDependencies": {
     "tyranid": "^0.5.0"
   },
@@ -17,8 +18,6 @@
     "tsc": "rm -rf ./dist/ && tsc"
   },
   "ava": {
-    "files": [
-      "dist/test/index.js"
-    ]
+    "files": ["dist/test/index.js"]
   }
 }
