--- a/packages/tyranid-sanitize/package.json
+++ b/packages/tyranid-sanitize/package.json
@@ -1,9 +1,11 @@
 {
   "name": "tyranid-sanitize",
-  "version": "0.5.3",
+  "version": "0.5.4",
   "main": "./dist/src/index.js",
   "typings": "./dist/src/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "peerDependencies": {
     "tyranid": "^0.5.0"
   },
@@ -18,6 +20,8 @@
     "tsc": "rm -rf ./dist/ && tsc"
   },
   "ava": {
-    "files": ["dist/test/index.js"]
+    "files": [
+      "dist/test/index.js"
+    ]
   }
 }
