--- a/packages/tyranid/package.json
+++ b/packages/tyranid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyranid",
-  "version": "0.5.34",
+  "version": "0.5.34-1",
   "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
   "main": "dist/src/tyranid.js",
   "typings": "src/tyranid.d.ts",
