--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
     "@types/puppeteer": "^1.3.2",
     "@types/socket.io-client": "^1.4.31",
     "ava": "0.16.0",
+    "aws-s3-promisified": "2.0.0",
+    "aws-sdk": "2.125.0",
     "body-parser": "^1.18.2",
     "chai": "3.5.0",
     "chai-as-promised": "5.1.0",
     "codecov": "1.0.1",
     "connect-mongo": "1.3.2",
+    "connect-multiparty": "2.0.0",
     "eslint": "3.9.0",
     "express": "^4.16.2",
     "express-session": "1.15.6",
