--- a/packages/tyranid/package.json
+++ b/packages/tyranid/package.json
@@ -1,7 +1,8 @@
 {
   "name": "tyranid",
-  "version": "0.5.66",
-  "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
+  "version": "0.6.0",
+  "description":
+    "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
   "main": "dist/src/tyranid.js",
   "typings": "tyranid.d.ts",
   "scripts": {
@@ -15,7 +16,8 @@
     "watch": "rm -rf ./dist/ && tsc -w",
     "tsc:tests": "npm run generate-typings && tsc -p ./test",
     "tsc": "rm -rf ./dist/ && tsc",
-    "mocha": "npm run tsc:tests && mocha \"./dist/test/test.js\" --read false -t 100000",
+    "mocha":
+      "npm run tsc:tests && mocha \"./dist/test/test.js\" --read false -t 100000",
     "mocha-coverage": "nyc mocha \"./dist/test/test.js\" --read false",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "server": "node ./test/serverBoot.js"
