--- a/packages/tyranid/package.json
+++ b/packages/tyranid/package.json
@@ -1,7 +1,8 @@
 {
   "name": "tyranid",
   "version": "0.6.0",
-  "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
+  "description":
+    "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
   "main": "dist/src/tyranid.js",
   "typings": "tyranid.d.ts",
   "scripts": {
@@ -15,7 +16,8 @@
     "watch": "rm -rf ./dist/ && tsc -w",
     "tsc:tests": "npm run generate-typings && tsc -p ./test",
     "tsc": "rm -rf ./dist/ && tsc",
-    "mocha": "npm run tsc:tests && mocha \"./dist/test/test.js\" --read false -t 100000",
+    "mocha":
+      "npm run tsc:tests && mocha \"./dist/test/test.js\" --read false -t 100000",
     "mocha-coverage": "nyc mocha \"./dist/test/test.js\" --read false",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "server": "node ./test/serverBoot.js"
@@ -30,7 +32,10 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
+    "aws-sdk": "2.125.0",
+    "aws-s3-promisified": "2.0.0",
     "chalk": "^2.1.0",
+    "connect-multiparty": "2.0.0",
     "continuation-local-storage": "3.1.6",
     "faker": "^4.1.0",
     "glob": "7.0.5",
