--- a/packages/tyranid/package.json
+++ b/packages/tyranid/package.json
@@ -1,7 +1,8 @@
 {
   "name": "tyranid",
   "version": "0.6.8",
-  "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
+  "description":
+    "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
   "main": "dist/src/tyranid.js",
   "typings": "tyranid.d.ts",
   "scripts": {
@@ -15,7 +16,8 @@
     "watch": "rm -rf ./dist/ && tsc -w",
     "tsc:tests": "npm run generate-typings && tsc -p ./test",
     "tsc": "rm -rf ./dist/ && tsc",
-    "mocha": "npm run tsc:tests && mocha \"./dist/test/test.js\" --read false -t 100000",
+    "mocha":
+      "npm run tsc:tests && mocha \"./dist/test/test.js\" --read false -t 100000",
     "mocha-coverage": "nyc mocha \"./dist/test/test.js\" --read false",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "server": "node ./test/serverBoot.js"
@@ -42,7 +44,7 @@
     "moment": "2.20.1",
     "node-fetch": "1.7.1",
     "on-finished": "2.3.0",
-    "socket.io": "2.0.3",
+    "socket.io": "2.2.0",
     "ts-node": "^3.2.0",
     "uglify-js": "2.8.16",
     "uuid": "^3.1.0"
