--- a/packages/tyranid/package.json
+++ b/packages/tyranid/package.json
@@ -35,6 +35,7 @@
     "chalk": "^2.1.0",
     "connect-multiparty": "2.0.0",
     "continuation-local-storage": "3.1.6",
+    "exceljs": "1.9.0",
     "faker": "^4.1.0",
     "glob": "7.0.5",
     "json-stable-stringify": "1.0.1",
