initial version of tyreant

--- a/packages/tyreant/tsconfig.json
+++ b/packages/tyreant/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "declaration": true,
     "experimentalDecorators": true,
     "target": "es5",
     "module": "esnext",
