--- a/packages/tyreant/package.json
+++ b/packages/tyreant/package.json
@@ -1,7 +1,8 @@
 {
   "name": "tyreant",
   "version": "0.0.7",
-  "description": "Tyranid metadata-driven UI library based on TYRanid, REAct, and ANT",
+  "description":
+    "Tyranid metadata-driven UI library based on TYRanid, REAct, and ANT",
   "homepage": "http://tyranid.org/tyreant",
   "main": "dist/tyreant.js",
   "typings": "dist/tyreant.d.ts",
@@ -19,8 +20,8 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@types/react": "16.3.13",
-    "@types/react-dom": "16.0.5",
+    "@types/react": "16.8.16",
+    "@types/react-dom": "16.8.4",
     "antd": "3.18.1",
     "lodash": "3.10.1",
     "mobx": "4.9.3",
