--- a/packages/tyranid/package.json
+++ b/packages/tyranid/package.json
@@ -52,5 +52,6 @@
   "peerDependencies": {
     "mongodb": "3.1.10",
     "typescript": "^2.5.3"
-  }
+  },
+  "gitHead": "083ef58e65f00563d1c0149fe77a443f1a9144cc"
 }
