--- a/packages/tyranid/package.json
+++ b/packages/tyranid/package.json
@@ -1,8 +1,7 @@
 {
   "name": "tyranid",
-  "version": "0.6.41",
-  "description":
-    "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
+  "version": "0.6.42",
+  "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
   "homepage": "http://tyranid.org",
   "main": "dist/src/tyranid.js",
   "typings": "tyranid.d.ts",
@@ -17,8 +16,7 @@
     "watch": "rm -rf ./dist/ && tsc -w",
     "tsc:tests": "npm run generate-typings && tsc -p ./test",
     "tsc": "rm -rf ./dist/ && tsc",
-    "mocha":
-      "npm run tsc:tests && mocha \"./dist/test/test.js\" --read false -t 100000",
+    "mocha": "npm run tsc:tests && mocha \"./dist/test/test.js\" --read false -t 100000",
     "mocha-coverage": "nyc mocha \"./dist/test/test.js\" --read false",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "server": "node ./test/serverBoot.js"
