--- a/packages/tyreant/tsconfig.json
+++ b/packages/tyreant/tsconfig.json
@@ -13,5 +13,5 @@
     "jsx": "react",
     "types": ["moment", "react", "react-dom", "antd"]
   },
-  "include": ["./**/*.ts", "./**/*.tsx"]
+  "include": ["./src/**/*.ts", "./src/**/*.tsx"]
 }
