--- a/packages/tyreant/package.json
+++ b/packages/tyreant/package.json
@@ -1,7 +1,8 @@
 {
   "name": "tyreant",
   "version": "0.0.39",
-  "description": "Tyranid metadata-driven UI library based on TYRanid, REAct, and ANT",
+  "description":
+    "Tyranid metadata-driven UI library based on TYRanid, REAct, and ANT",
   "homepage": "http://tyranid.org/tyreant",
   "main": "dist/tyreant.js",
   "typings": "dist/tyreant.d.ts",
@@ -21,11 +22,13 @@
   "dependencies": {
     "@types/react": "16.8.16",
     "@types/react-dom": "16.8.4",
+    "@types/react-beautiful-dnd": "11.0.3",
     "antd": "3.18.1",
     "lodash": "3.10.1",
-    "mobx": "4.9.3",
-    "mobx-react": "5.4.3",
+    "mobx": "5.13.0",
+    "mobx-react": "6.1.3",
     "react": "16.8.6",
+    "react-beautiful-dnd": "11.0.5",
     "react-dom": "16.8.6"
   },
   "peerDependencies": {
