--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
   "tslint.autoFixOnSave": true,
   "[html]": {
     "editor.formatOnSave": false
-  }
+  },
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
