--- a/packages/tyreant/package.json
+++ b/packages/tyreant/package.json
@@ -1,7 +1,8 @@
 {
   "name": "tyreant",
   "version": "0.0.69",
-  "description": "Tyranid metadata-driven UI library based on TYRanid, REAct, and ANT",
+  "description":
+    "Tyranid metadata-driven UI library based on TYRanid, REAct, and ANT",
   "homepage": "http://tyranid.org/tyreant",
   "main": "dist/tyreant.js",
   "typings": "dist/tyreant.d.ts",
@@ -21,6 +22,8 @@
   "dependencies": {
     "@types/react": "16.8.16",
     "@types/react-beautiful-dnd": "11.0.3",
+    "@types/react-dnd": "2.0.34",
+    "@types/react-dnd-html5-backend": "2.1.8",
     "@types/react-dom": "16.8.4",
     "antd": "3.18.1",
     "lodash": "3.10.1",
@@ -28,6 +31,8 @@
     "mobx-react": "6.1.3",
     "react": "16.8.6",
     "react-beautiful-dnd": "11.0.5",
+    "react-dnd": "^2.6.0",
+    "react-dnd-html5-backend": "2.5.4",
     "react-dom": "16.8.6"
   },
   "peerDependencies": {
