--- a/packages/tyreant/package.json
+++ b/packages/tyreant/package.json
@@ -1,7 +1,8 @@
 {
   "name": "tyreant",
   "version": "0.0.74",
-  "description": "Tyranid metadata-driven UI library based on TYRanid, REAct, and ANT",
+  "description":
+    "Tyranid metadata-driven UI library based on TYRanid, REAct, and ANT",
   "homepage": "http://tyranid.org/tyreant",
   "main": "dist/tyreant.js",
   "typings": "dist/tyreant.d.ts",
