update typescript to 3.7.2:

--- a/packages/tyranid/package.json
+++ b/packages/tyranid/package.json
@@ -54,7 +54,7 @@
   },
   "peerDependencies": {
     "mongodb": "3.1.10",
-    "typescript": "^2.5.3"
+    "typescript": "3.7.2"
   },
   "gitHead": "3f09860429877a2720ff2f5ea1333474192ae367"
 }
