--- a/packages/tyranid-cli/package.json
+++ b/packages/tyranid-cli/package.json
@@ -19,6 +19,7 @@
     "@types/yargs": "13.0.3",
     "boxen": "4.2.0",
     "chalk": "3.0.0",
+    "dirty-json": "^0.7.1",
     "mongodb": "3.1.10",
     "yargs": "15.0.2"
   },
