--- a/packages/tyranid-gracl/package.json
+++ b/packages/tyranid-gracl/package.json
@@ -36,7 +36,8 @@
     "mongo-explain-match": "^0.0.4"
   },
   "peerDependencies": {
-    "tyranid": "^0.5.0"
+    "tyranid": "^0.6.0",
+    "tyranid-tdgen": "^0.5.0"
   },
   "ava": {
     "files": [
