--- a/packages/tyreant/package.json
+++ b/packages/tyreant/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyreant",
-  "version": "0.0.100",
+  "version": "0.0.101",
   "description": "Tyranid metadata-driven UI library based on TYRanid, REAct, and ANT",
   "homepage": "http://tyranid.org/tyreant",
   "main": "dist/tyreant.js",
@@ -41,8 +41,8 @@
     "tyranid": "^0.6.0"
   },
   "devDependencies": {
-    "precss": "^4.0.0",
-    "postcss-cli": "^6.1.3"
+    "postcss-cli": "^6.1.3",
+    "precss": "^4.0.0"
   },
   "gitHead": "9845d93a999aa5a2fe0271d5d2b9b81bd2007ee3"
 }
