work on tyreant styles

--- a/packages/tyranid-tdgen/package.json
+++ b/packages/tyranid-tdgen/package.json
@@ -45,5 +45,6 @@
   },
   "devDependencies": {
     "@types/lodash": "4.14.65"
-  }
+  },
+  "gitHead": "0471fcd1d566d5924dfe6ef506ce38c43dd65f3c"
 }
