--- a/packages/tyranid-gracl/package.json
+++ b/packages/tyranid-gracl/package.json
@@ -39,10 +39,13 @@
     "tyranid": "^0.6.0",
     "tyranid-tdgen": "^0.5.0"
   },
+  "devDependencies": {
+    "typescript": "3.7.2"
+  },
   "ava": {
     "files": [
       "dist/test/spec/**/*.js"
     ]
   },
-  "gitHead": "0471fcd1d566d5924dfe6ef506ce38c43dd65f3c"
+  "gitHead": "7c11364fa8c56b7d371d9e341613907943818e47"
 }
