--- a/packages/tyranid-graphql/package.json
+++ b/packages/tyranid-graphql/package.json
@@ -26,6 +26,7 @@
     "tyranid": "^0.6.0"
   },
   "devDependencies": {
+    "ava": "0.16.0",
     "typescript": "3.7.2"
   },
   "ava": {
@@ -33,5 +34,5 @@
       "dist/test/index.js"
     ]
   },
-  "gitHead": "ef7ee432cc699d64c15a57505ffff791998601de"
+  "gitHead": "ec575137c59d2eb7d881c618ffe0eb7793b596de"
 }
