--- a/packages/tyreant/package.json
+++ b/packages/tyreant/package.json
@@ -37,12 +37,12 @@
     "react-dom": "16.8.6"
   },
   "peerDependencies": {
-    "typescript": "3.7.2",
     "tyranid": "^0.6.0"
   },
   "devDependencies": {
     "postcss-cli": "^6.1.3",
-    "precss": "^4.0.0"
+    "precss": "^4.0.0",
+    "typescript": "3.7.2"
   },
-  "gitHead": "45e8be15eb82557c1b546da1e1407b801e620170"
+  "gitHead": "92959b30994a217b21088d01c9b5ccaf9cca5768"
 }
