--- a/packages/tyranid-cli/package.json
+++ b/packages/tyranid-cli/package.json
@@ -32,5 +32,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/tyranid-org/tyranid"
-  }
+  },
+  "gitHead": "5b8c0de22c2b1e9ecd11a6f24b25f730612b4c6c"
 }
