--- a/packages/tyreant/package.json
+++ b/packages/tyreant/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "postcss-cli": "^6.1.3",
     "precss": "^4.0.0",
+    "tyranid": "^0.6.0",
     "typescript": "3.7.2"
   },
   "gitHead": "5b8c0de22c2b1e9ecd11a6f24b25f730612b4c6c"
