--- a/packages/tyreant/package.json
+++ b/packages/tyreant/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyreant",
-  "version": "0.0.110",
+  "version": "0.0.111",
   "description": "Tyranid metadata-driven UI library based on TYRanid, REAct, and ANT",
   "homepage": "http://tyranid.org/tyreant",
   "main": "dist/tyreant.js",
@@ -42,8 +42,8 @@
   "devDependencies": {
     "postcss-cli": "^6.1.3",
     "precss": "^4.0.0",
-    "tyranid": "^0.6.0",
-    "typescript": "3.7.2"
+    "typescript": "3.7.2",
+    "tyranid": "^0.6.121"
   },
   "gitHead": "5b8c0de22c2b1e9ecd11a6f24b25f730612b4c6c"
 }
