work on TyrTable

--- a/packages/tyreant/package.json
+++ b/packages/tyreant/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "npm run build-js && npm run build-css",
     "build-js": "npm run tsc",
-    "build-css": "$(npm bin)/postcss --use precss -o tyreant.css tyreant.scss",
+    "build-css": "$(npm bin)/node-sass tyreant.scss tyreant.css",
     "tsc": "rm -rf ./dist/ && tsc"
   },
   "repository": {
@@ -40,10 +40,9 @@
     "tyranid": "^0.6.0"
   },
   "devDependencies": {
-    "postcss-cli": "^6.1.3",
-    "precss": "^4.0.0",
     "typescript": "3.7.2",
-    "tyranid": "^0.6.122"
+    "tyranid": "^0.6.122",
+    "node-sass": "4.13.0"
   },
   "gitHead": "5b8c0de22c2b1e9ecd11a6f24b25f730612b4c6c"
 }
