work on pages, and TyrTable fix

--- a/packages/tyranid/package.json
+++ b/packages/tyranid/package.json
@@ -10,11 +10,12 @@
     "test": "npm run mocha",
     "build": "npm run tsc",
     "test-travis": "npm run pretest && npm run mocha-coverage",
-    "generate-typings": "node ./scripts/generate-typings.js",
+    "generate-builtin-typings": "node ./scripts/generate-builtin-typings.js",
+    "generate-test-typings": "node ./scripts/generate-test-typings.js",
     "pretest": "npm run tsc",
     "prepublish": "npm run test",
     "watch": "rm -rf ./dist/ && tsc -w",
-    "tsc:tests": "npm run generate-typings && tsc -p ./test",
+    "tsc:tests": "npm run generate-test-typings && tsc -p ./test",
     "tsc": "rm -rf ./dist/ && tsc",
     "mocha": "npm run tsc:tests && mocha \"./dist/test/test.js\" --read false -t 100000",
     "mocha-coverage": "nyc mocha \"./dist/test/test.js\" --read false",
