--- a/packages/tyreant/package.json
+++ b/packages/tyreant/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyreant",
-  "version": "0.0.133",
+  "version": "0.0.134",
   "description": "Tyranid metadata-driven UI library based on TYRanid, REAct, and ANT",
   "homepage": "http://tyranid.org/tyreant",
   "main": "dist/tyreant.js",
@@ -37,18 +37,18 @@
     "react-dom": "16.8.6"
   },
   "peerDependencies": {
-    "tyranid": "^0.6.0",
     "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "tyranid": "^0.6.0"
   },
   "devDependencies": {
-    "node-sass": "4.13.0",
-    "typescript": "3.7.2",
-    "tyranid": "^0.6.132",
     "@types/react-router": "5.0.3",
     "@types/react-router-dom": "4.3.5",
+    "node-sass": "4.13.0",
     "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "typescript": "3.7.2",
+    "tyranid": "^0.6.133"
   },
   "gitHead": "5b8c0de22c2b1e9ecd11a6f24b25f730612b4c6c"
 }
