--- a/packages/tyranid-tdgen/package.json
+++ b/packages/tyranid-tdgen/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyranid-tdgen",
-  "version": "0.5.39",
+  "version": "0.6.0-alpha.0",
   "description": "Generate type definition files from tyranid schemas",
   "repository": {
     "type": "git",
