--- a/packages/tyreant/package.json
+++ b/packages/tyreant/package.json
@@ -34,7 +34,8 @@
     "react-beautiful-dnd": "11.0.5",
     "react-dnd": "^2.6.0",
     "react-dnd-html5-backend": "2.5.4",
-    "react-dom": "16.8.6"
+    "react-dom": "16.8.6",
+    "react-dropzone": "10.2.1"
   },
   "peerDependencies": {
     "react-router": "^5.0.1",
