--- a/packages/tyreant/package.json
+++ b/packages/tyreant/package.json
@@ -25,8 +25,6 @@
     "@ant-design/icons": "4.0.2",
     "@types/react": "16.8.16",
     "@types/react-beautiful-dnd": "11.0.3",
-    "@types/react-dnd": "2.0.34",
-    "@types/react-dnd-html5-backend": "2.1.8",
     "@types/react-dom": "16.8.4",
     "antd": "4.0.2",
     "lodash": "3.10.1",
@@ -34,8 +32,8 @@
     "mobx-react": "6.1.3",
     "react": "16.8.6",
     "react-beautiful-dnd": "11.0.5",
-    "react-dnd": "^2.6.0",
-    "react-dnd-html5-backend": "2.5.4",
+    "react-dnd": "10.0.2",
+    "react-dnd-html5-backend": "10.0.2",
     "react-dom": "16.8.6",
     "react-dropzone": "10.2.1"
   },
