--- a/packages/tyreant/package.json
+++ b/packages/tyreant/package.json
@@ -27,13 +27,13 @@
     "mobx": "5.13.0",
     "mobx-react": "6.1.3",
     "react": "16.13.0",
-    "react-beautiful-dnd": "11.0.5",
-    "react-dnd": "10.0.2",
-    "react-dnd-html5-backend": "10.0.2",
     "react-dom": "16.13.0",
     "react-dropzone": "10.2.1"
   },
   "peerDependencies": {
+    "react-beautiful-dnd": "^11.0.3",
+    "react-dnd": "10.0.2",
+    "react-dnd-html5-backend": "10.0.2",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "tyranid": "^0.6.144"
@@ -45,6 +45,9 @@
     "@types/react-router": "5.0.3",
     "@types/react-router-dom": "4.3.5",
     "node-sass": "4.13.0",
+    "react-beautiful-dnd": "11.0.3",
+    "react-dnd": "10.0.2",
+    "react-dnd-html5-backend": "10.0.2",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "typescript": "3.8.3",
