--- a/packages/tyreant/package.json
+++ b/packages/tyreant/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyreant",
-  "version": "0.0.172",
+  "version": "0.0.172-hotfix",
   "description": "Tyranid metadata-driven UI library based on TYRanid, REAct, and ANT",
   "homepage": "http://tyranid.org/tyreant",
   "main": "dist/tyreant.js",
