--- a/packages/tyreant/package.json
+++ b/packages/tyreant/package.json
@@ -28,7 +28,8 @@
     "mobx-react": "6.1.3",
     "react": "16.13.0",
     "react-dom": "16.13.0",
-    "react-dropzone": "10.2.1"
+    "react-dropzone": "10.2.1",
+    "react-resizable": "^1.10.1"
   },
   "peerDependencies": {
     "react-beautiful-dnd": "^11.0.3",
@@ -42,6 +43,7 @@
     "@types/react": "16.9.23",
     "@types/react-beautiful-dnd": "11.0.3",
     "@types/react-dom": "16.9.5",
+    "@types/react-resizable": "^1.7.2",
     "@types/react-router": "5.0.3",
     "@types/react-router-dom": "4.3.5",
     "node-sass": "4.13.0",
