ckeditor for large text

--- a/packages/tyreant/package.json
+++ b/packages/tyreant/package.json
@@ -22,6 +22,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@ant-design/icons": "4.0.2",
+    "@ckeditor/ckeditor5-react": "2.1.0",
+    "@ckeditor/ckeditor5-build-classic": "18.0.0",
     "antd": "4.0.3",
     "lodash": "3.10.1",
     "mobx": "5.13.0",
@@ -32,6 +34,8 @@
     "react-resizable": "^1.10.1"
   },
   "peerDependencies": {
+    "@ckeditor/ckeditor5-react": "2.1.0",
+    "@ckeditor/ckeditor5-build-classic": "18.0.0",
     "react-beautiful-dnd": "^11.0.3",
     "react-dnd": "10.0.2",
     "react-dnd-html5-backend": "10.0.2",
