--- a/packages/tyreant/package.json
+++ b/packages/tyreant/package.json
@@ -22,6 +22,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@ant-design/icons": "4.0.2",
+    "@react-google-maps/api": "1.13.0",
+    "@types/googlemaps": "3.40.3",
     "antd": "4.0.3",
     "lodash": "3.10.1",
     "mobx": "5.15.4",
