--- a/packages/tyreant/package.json
+++ b/packages/tyreant/package.json
@@ -22,15 +22,17 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@ant-design/icons": "4.0.2",
+    "@ant-design/icons": "4.5.0",
     "@ckeditor/ckeditor5-build-classic": "24.0.0",
     "@ckeditor/ckeditor5-react": "3.0.0",
     "@react-google-maps/api": "1.13.0",
     "@types/googlemaps": "3.40.3",
-    "antd": "4.0.3",
+    "antd": "4.12.3",
     "lodash": "3.10.1",
     "mobx": "5.15.4",
     "mobx-react": "6.2.2",
+    "moment": "2.29.1",
+    "moment-timezone": "0.5.33",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-dropzone": "10.2.1",
