--- a/packages/tyreant/package.json
+++ b/packages/tyreant/package.json
@@ -9,8 +9,7 @@
     "build": "npm run build-js && npm run build-css",
     "build-js": "npm run tsc",
     "build-css": "$(npm bin)/node-sass tyreant.scss tyreant.css",
-    "tsc": "rm -rf ./dist/ && tsc",
-    "MENTION": "@ckeditor/ckeditor5-mention: ^24.0.0"
+    "tsc": "rm -rf ./dist/ && tsc"
   },
   "repository": {
     "type": "git",
@@ -23,11 +22,10 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@ant-design/icons": "4.5.0",
-    "@ckeditor/ckeditor5-build-classic": "24.0.0",
-    "@ckeditor/ckeditor5-react": "3.0.0",
     "@react-google-maps/api": "1.13.0",
     "@types/googlemaps": "3.40.3",
     "antd": "4.12.3",
+    "is-hotkey": "0.2.0",
     "lodash": "3.10.1",
     "mobx": "5.15.4",
     "mobx-react": "6.2.2",
@@ -36,7 +34,11 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-dropzone": "10.2.1",
-    "react-resizable": "^1.10.1"
+    "react-resizable": "^1.10.1",
+    "slate": "0.59.0",
+    "slate-history": "0.59.0",
+    "slate-hyperscript": "0.59.0",
+    "slate-react": "0.59.0"
   },
   "peerDependencies": {
     "react-beautiful-dnd": "^11.0.3",
